[package]
name = "everypulse"
version = "0.1.0"
edition = "2018"
resolver = "2"

[features]
default = [
  "bevy/bevy_gltf",
  "bevy/bevy_winit",
  "bevy/render",
  "bevy/png",
  "bevy/hdr",
]

native = [
  "bevy/bevy_wgpu",
]

web = [
  "bevy_webgl2"
]

[dependencies]
bevy = {version="0.5.0", default-features=false}
bevy_webgl2 = {version="0.5.0", optional=true}
# winit = {version = "0.25.0"}
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
bevy_kira_audio = {version = "0.5.1", features=["flac","ogg","wav"]}
notify = "=5.0.0-pre.10"
heron = { version = "0.11.0", features = ["2d", "debug-2d"] }

[profile.dev]
# opt-level = 1

[profile.release]
# lto = true
# opt-level = 's'